--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react-native": "^0.4.4",
     "react-native-icons": "0.0.8",
+    "react-native-refreshable-listview": "^1.2.0",
     "react-native-router": "^0.1.3"
   }
 }
