--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.4.4",
-    "react-native-icons": "0.0.8",
-    "react-native-refreshable-listview": "^1.2.0",
-    "react-native-router": "^0.1.3"
+    "react-native": "^0.12.0",
+    "react-native-icons": "^0.6.3",
+    "react-native-refreshable-listview": "^1.3.0",
+    "react-native-router": "^0.2.1"
   }
 }
