--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.12.0",
+    "react-native": "0.14.2",
     "react-native-icons": "^0.6.3",
     "react-native-refreshable-listview": "^1.3.0",
     "react-native-router": "^0.2.1"
