--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "0.14.2",
-    "react-native-icons": "^0.6.3",
-    "react-native-refreshable-listview": "^1.3.0",
-    "react-native-router": "^0.2.1"
+    "react": "15.0.2",
+    "react-native": "^0.26.3",
+    "react-native-router-flux": "^3.26.16",
+    "react-native-vector-icons": "^2.0.3"
   }
 }
