--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "15.0.2",
-    "react-native": "^0.26.3",
+    "react": "^15.1.0",
+    "react-native": "^0.27.0",
     "react-native-router-flux": "^3.26.16",
     "react-native-vector-icons": "^2.0.3"
   }
